k8s/alertmanager.yaml
# ------------------------------------------
# 2. AlertManager 部署（Deployment）
# ------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: prom/alertmanager:latest
          args:
            - --config.file=/etc/alertmanager/alertmanager.yml
          ports:
            - containerPort: 9093
          volumeMounts:
            - name: config
              mountPath: /etc/alertmanager/alertmanager.yml
              subPath: alertmanager.yml
      volumes:
        - name: config
          configMap:
            name: alertmanager-config

---
# ------------------------------------------
# 3. AlertManager 服务（Service）
# ------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
spec:
  selector:
    app: alertmanager
  ports:
    - port: 9093
      targetPort: 9093
      nodePort: 30093
  type: NodePort
